changed user authentication
